yaml/HighloadAPI/deployment_sync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpc-sync-api-deployment
  labels:
    app: dpc-sync-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dpc-sync-api
  template:
    metadata:
      labels:
        app: dpc-sync-api
    spec:
      containers:
      - name: dpc-sync-api
        image: spbdocker03:5000/dpc_highload_api:||version||
        ports:
        - containerPort: 80
