yaml/HighloadAPI/service_sync.yaml
apiVersion: v1
kind: Service
metadata:
  name: dpc-sync-api
spec:
  type: ClusterIP
  selector:
    app: dpc-sync-api
  ports:
  - port: 80
