yaml/HighloadAPI/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dpc-highload-api
spec:
  rules:
  - host: apidpc.dev.qsupport.ru
    http:
      paths:
      - backend:
          serviceName: dpc-highload-api
          servicePort: 80
